// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`boolean.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php
$true = true;
$false = false;

=====================================output=====================================
<?php
$true = true;
$false = false;

================================================================================
`;

exports[`single.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php
true;

=====================================output=====================================
<?php
true;

================================================================================
`;
